2003-10-16  Per Bothner  <per@bothner.com>

	* Nodes.java (getSeq, getPos):  New convenience functions.
	* IntersectNodes.java:  New class, extends Procedure2.
	* Makefile.am:  Update accordingly.

	* UnionNodes.java:  It implements Inlineable.

2003-10-08  Per Bothner  <per@bothner.com>

	* Nodes.java (get):  Fix off-by-one bug.

2003-09-24  Per Bothner  <per@bothner.com>

	* NodeConstructor.java:  New abstract class, extends CpsProcedure.
	* Makefile.am:  Update accordingly.
	* AttributeConstructor.java:  Now extends NodeConstructor.
	(apply):  Update.  (compileToNode):  New, replaces compile method.
	* DocumentConstructor.java:  Likewise.
	* ElementConstructor.java:  Likewise.  Move getReturnType up.
	* TextConstructor.java:  Use two NodeConstructor helper methods.

2003-09-18  Per Bothner  <per@bothner.com>

	* Nodes.java (root):  New static methods.

2003-09-14  Per Bothner  <per@bothner.com>

	* AncestorAxis.java:  New class, extends TreeScanner.
	* AncestorOrSelfAxis.java:  Likewise.
	* FollowingAxis.java:  Likewise.
	* FollowingSiblingAxis.java:  Likewise.
	* PrecedingAxis.java:  Likewise.
	* PrecedingSiblingAxis.java:  Likewise.

	* ChildAxis.java (scan):  Re-write to use nextMatching.
	* DescendantAxis.java (scan):  Likewise.
	* DescendantOrSelfAxis.java (scan):  Likewise.

	* NamedAttributes.java:  Removed - no longer used.
	* NamedChildren.java:  Likewise.
	* NamedDescendants.java:  Likewise.
	* Makefile.am:  Update accordingly.

2003-09-09  Per Bothner  <per@bothner.com>

	* CoerceNodes.java:  New class, extends Procedure1.
	* Nodes.java:  New class, extends Values,
	* Makefile.am (java_sources):  Update accordingly.
	* SortNodes.java (apply1, compile):  Canonicalize result.
	* SortedNodes.java:  Now extends Nodes.
	Many methods are now inherited from Nodes.

2003-09-04  Per Bothner  <per@bothner.com>

	* SortNodes.java (compile):  Fix infinite compile-time recursion.

	* Focus.java (size, contextSize):  Remove unused fields.
