@@ -1,3 +1,8 @@
+2003-10-29  Per Bothner  <per@bothner.com>
+
+	* AttributeType.java (isInstance, coerceOrNull):  Handle XName.
+	* ElementType.java (isInstance, coerceOrNull):  Handle XName.
+
 2003-10-16  Per Bothner  <per@bothner.com>
 
 	* Nodes.java (getSeq, getPos):  New convenience functions.
